@@ -25,4 +25,17 @@ class SearchApiOptions extends ManyToOne {
     unset($form['reduce_duplicates']);
   }
 
+  /**
+   * {@inheritdoc}
+   */
+  public function getValueOptions() {
+    parent::getValueOptions();
+
+    if ($this->valueOptions === NULL) {
+      $this->valueOptions = [];
+    }
+
+    return $this->valueOptions;
+  }
+
 }
